# productivityHub

./: .gitignore  Home.py  README.md  app.py  pyproject.toml  requirements.txt
assets/data/: lista_livros_2025.csv  lista_livros_2025_edited.csv
components/books/: analysis.py  input.py  management.py  mural.py  table.py
pages/: 1_Estrutura_de_Pastas.py  2_Listador_de_Arquivos.py  3_Editor_de_PDFs.py  3_Unificador_de_PDFs.py  4_PDF_para_Imagem.py  5_Redimensionador_Imagens.py  5_Transcritor_de_Audio.py  6_Historico_Leitura.py  6_Transcritor_de_Audio.py  7_Doc_para_MD.py  7_Historico_Leitura.py  7_Redimensionador_Imagens.py
utils/: audio_tools.py  file_system.py  image_tools.py  library_manager.py  pdf_tools.py  ui.py
